tests/paczka1/fuzzy1/16480713.err
Error in line 3: lrxHPo S767 41,9
Error in line 1: S767 S767 85,5
Error in line 8: VRPM06 S336 37,8
Error in line 19: EXsmTX S336 28,7
Error in line 26: EXsmTX S368 7,1
Error in line 18: S767 S336 70,2
Error in line 33: zJjpN1HWa S767 94,5
